--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,16 +6,40 @@ on:
       - 'v*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   prepare:
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.version.outputs.version }}
+      version: ${{ steps.extract_version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> "$GITHUB_OUTPUT"
+      - id: extract_version
+        run: |
+          RAW_TAG=${GITHUB_REF##*/}
+          VERSION=${RAW_TAG#v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Update version.json
+        run: |
+          jq --arg v "$VERSION" '.latest_version = $v |
+            .download_url_windows = "https://nregabot.com/updates/NREGABot-v\($v)-Setup.exe" |
+            .download_url_macos = "https://nregabot.com/updates/NREGABot-v\($v)-macOS.dmg"' \
+            version.json > version.tmp.json
+          mv version.tmp.json version.json
+
+      - name: Commit updated version.json
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add version.json
+          git commit -m "chore: update version.json to $VERSION" || echo "No changes to commit"
+          git push
 
   build-macos:
     needs: prepare
@@ -28,28 +52,38 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install pyinstaller
-        run: pip install pyinstaller
-
-      - name: Make .env file
-        run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
-
-      - name: Build macOS DMG
+      - name: Install dependencies
         run: |
-          chmod +x build_macos.sh
-          ./build_macos.sh
+          pip install -r requirements.txt pyinstaller fpdf
+          brew install create-dmg
+
+      - name: Clean previous builds
+        run: rm -rf dist build
+
+      - name: Make build script executable
+        run: chmod +x ./build_macos.sh
+
+      - name: Patch version in script
+        run: |
+          sed -i '' "s/^APP_VERSION=.*/APP_VERSION=\"${{ needs.prepare.outputs.version }}\"/" build_macos.sh
+
+      - name: Run macOS build
+        run: ./build_macos.sh
 
       - name: Rename DMG
         run: |
-          DMG_FILE=$(find dist -name '*.dmg' | head -n 1)
-          if [[ -z "$DMG_FILE" ]]; then echo "DMG not found!"; exit 1; fi
-          mv "$DMG_FILE" "dist/NREGABot-v${{ needs.prepare.outputs.version }}-macOS.dmg"
+          DMG_FILE=$(find dist -iname '*.dmg' | head -n 1)
+          if [ -f "$DMG_FILE" ]; then
+            mv "$DMG_FILE" "dist/NREGABot-v${{ needs.prepare.outputs.version }}-macOS.dmg"
+          else
+            echo "❌ DMG not found!" && ls -la dist/ && exit 1
+          fi
 
-      - name: Upload macOS artifact
+      - name: Upload DMG
         uses: actions/upload-artifact@v4
         with:
-          name: macos-artifact
-          path: dist/*.dmg
+          name: macos-dmg
+          path: dist/NREGABot-v${{ needs.prepare.outputs.version }}-macOS.dmg
 
   build-windows:
     needs: prepare
@@ -62,8 +96,9 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install pyinstaller
-        run: pip install pyinstaller
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt pyinstaller fpdf
 
       - name: Clean builds
         shell: pwsh
@@ -71,35 +106,54 @@ jobs:
           if (Test-Path dist) { Remove-Item -Recurse -Force dist }
           if (Test-Path build) { Remove-Item -Recurse -Force build }
 
-      - name: Generate .env
+
+      - name: Generate .env from secret
         shell: pwsh
         run: |
           "@`"SENTRY_DSN=${{ secrets.SENTRY_DSN }}`"" | Out-File -Encoding ASCII -FilePath .env
 
-      - name: Build Portable EXE
-        run: pyinstaller --clean --noconfirm --windowed --name "NREGABot" --add-data ".env;." main_app.py
+      - name: Build portable EXE
+        run: |
+          pyinstaller --clean --noconfirm --windowed --name "NREGABot" `
+            --icon=assets/app_icon.ico `
+            --add-data="logo.png;." `
+            --add-data="payment_qr.png;." `
+            --add-data="theme.json;." `
+            --add-data="changelog.json;." `
+            --add-data="assets;assets" `
+            --add-data=".env;." `
+            --add-data="jobcard.jpeg;." `
+            --collect-data fpdf `
+            main_app.py
 
-      - name: Rename portable
-        run: Rename-Item -Path "dist\NREGABot\NREGABot.exe" -NewName "NREGABot-v${{ needs.prepare.outputs.version }}-Portable.exe"
+      - name: Rename portable EXE
+        run: |
+          mkdir dist_out
+          mv dist/NREGABot/NREGABot.exe dist_out/NREGABot-v${{ needs.prepare.outputs.version }}-Portable.exe
 
       - name: Install Inno Setup
-        run: choco install innosetup -y
+        run: |
+          curl -L -o is.exe https://jrsoftware.org/download.php/is.exe
+          Start-Process .\is.exe -ArgumentList "/VERYSILENT" -Wait
 
-      - name: Build Installer
+      - name: Build installer
         shell: pwsh
         run: |
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer_script.iss
 
-      - name: Rename installer
-        run: Rename-Item "Output\NREGABot-Setup.exe" "NREGABot-v${{ needs.prepare.outputs.version }}-Setup.exe"
+
+      - name: Rename installer EXE
+        run: |
+          mkdir dist_installer
+          mv Output/NREGABot-Setup.exe dist_installer/NREGABot-v${{ needs.prepare.outputs.version }}-Setup.exe
 
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows-artifact
+          name: windows
           path: |
-            dist\NREGABot-v*-Portable.exe
-            Output\NREGABot-v*-Setup.exe
+            dist_out/*.exe
+            dist_installer/*.exe
 
   build-linux:
     needs: prepare
@@ -112,67 +166,84 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install deps
+      - name: Install system dependencies + fpm
         run: |
           sudo apt-get update
-          sudo apt-get install -y ruby ruby-dev build-essential
+          sudo apt-get install -y ruby ruby-dev build-essential python3-pyqt5 pyqt5-dev-tools
           sudo gem install --no-document fpm
-          pip install pyinstaller
 
-      - name: Create .env
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt pyinstaller fpdf
+
+      - name: Clean previous builds
+        run: rm -rf dist build package
+
+      - name: Generate .env from secret
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
 
-      - name: Build binary
-        run: pyinstaller --clean --noconfirm --windowed --name "NREGABot" --add-data ".env:." main_app.py
-
-      - name: Package .deb with FPM
+      - name: Build Linux app
         run: |
-          VERSION=${{ needs.prepare.outputs.version }}
-          mkdir -p pkg/usr/local/bin
-          cp dist/NREGABot/NREGABot pkg/usr/local/bin/
-          fpm -s dir -t deb -n nregabot -v "$VERSION" --prefix=/ -C pkg .
+          pyinstaller --clean --noconfirm --windowed --name "NREGABot" \
+            --add-data="logo.png:." \
+            --add-data="payment_qr.png:." \
+            --add-data="theme.json:." \
+            --add-data="changelog.json:." \
+            --add-data="assets:assets" \
+            --add-data=".env:." \
+            --add-data="jobcard.jpeg:." \
+            --collect-data fpdf \
+            main_app.py
+
+      - name: Create .deb package
+        run: |
+          mkdir -p package/usr/local/bin
+          cp dist/NREGABot/NREGABot package/usr/local/bin/
+          fpm -s dir -t deb -n nregabot -v ${{ needs.prepare.outputs.version }} \
+              --prefix=/usr/local/bin \
+              -C package .
 
       - name: Rename .deb
-        run: mv nregabot_${{ needs.prepare.outputs.version }}_amd64.deb NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
+        run: mv *.deb NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
 
-      - name: Upload Linux artifact
+      - name: Upload .deb
         uses: actions/upload-artifact@v4
         with:
-          name: linux-artifact
-          path: ./NREGABot-v*-linux.deb
-
+          name: linux-deb
+          path: NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
+          
   release:
-    needs: [build-macos, build-windows, build-linux]
+    needs: [build-macos, build-windows, build-linux, prepare]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download all artifacts
+      - name: Read changelog.json and format description
+        id: changelog
+        run: |
+          VERSION=${{ needs.prepare.outputs.version }}
+          echo "VERSION=$VERSION"
+          echo "## NREGA Bot v$VERSION" > release.md
+          echo "" >> release.md
+          echo "### What's New in v$VERSION" >> release.md
+          echo "" >> release.md
+          jq -r --arg v "$VERSION" '.[$v][]' changelog.json | sed 's/^/- /' >> release.md
+          cat release.md
+
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: release-assets
 
-      - name: Extract version from tag
-        id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Parse changelog
-        id: changelog
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          TITLE="NREGA Bot v$VERSION"
-          BODY=$(jq -r --arg v "$VERSION" '.[$v][]' changelog.json | sed 's/^/- /')
-          echo "$BODY" > body.md
-          echo "title=$TITLE" >> $GITHUB_OUTPUT
-
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: ${{ steps.changelog.outputs.title }}
-          tag_name: ${{ github.ref_name }}
-          body_path: body.md
+          name: NREGA Bot v${{ needs.prepare.outputs.version }}
+          tag_name: v${{ needs.prepare.outputs.version }}
+          body_path: release.md
           files: |
-            release-assets/**/NREGABot-v*-macOS.dmg
-            release-assets/**/NREGABot-v*-Portable.exe
-            release-assets/**/NREGABot-v*-Setup.exe
-            release-assets/**/NREGABot-v*-linux.deb
+            release-assets/**/*NREGABot*-macOS.dmg
+            release-assets/**/*NREGABot*-Portable.exe
+            release-assets/**/*NREGABot*-Setup.exe
+            release-assets/**/*NREGABot*-linux.deb
+
+          
